# GCBF_EXPERIMENTS_WS

./: .gitignore  .gitmodules  AGENTS.md  CRAZYFLIE_VICON_SETUP.md  MULTI_CF_DEMO_COMMANDS.md  RADIO70_TWO_CF_EXPERIMENT.md  RADIO80_TWO_CF_EXPERIMENT.md  README.md  README_POSITION_EXCHANGE_SETUP.md
crazyflie_vicon_bringup/: README.md  README_POSITION_EXCHANGE_SETUP.md  package.xml  setup.cfg  setup.py
crazyflie_vicon_bringup/config/: crazyflies_4.yaml  crazyflies_4_cf5_cf8.yaml  crazyflies_8.yaml  crazyflies_8_debug_single.yaml  crazyflies_radio70_dual.yaml  crazyflies_radio70_single.yaml  crazyflies_single.yaml  motion_capture.yaml  rviz_8_tf.yaml
crazyflie_vicon_bringup/crazyflie_vicon_bringup/: cf5_position_exchange.py  check_vicon_positions.py  eight_drone_hover.py  eight_drone_position_exchange.py  four_drone_setpoint.py  four_drone_setpoint_cf5_cf8.py  gcbf_experiments.py  identify_crazyradios.py  pose_debug.py  single_drone_streamed_hover.py
crazyflie_vicon_bringup/launch/: bringup.launch.py  bringup_3.launch.py  bringup_4.launch.py  bringup_4_cf5_cf8.launch.py  bringup_8.launch.py  bringup_single.launch.py  bringup_single_streamed_hover.launch.py  radio70_dual.launch.py  teleop_hover.launch.py
crazyflie_vicon_bringup/models/: gcbfplus_policy.pt
src/crazyflie_vicon_bringup/: README.md  README_POSITION_EXCHANGE_SETUP.md  package.xml  setup.py
src/crazyflie_vicon_bringup/config/: crazyflies.yaml  crazyflies_3.yaml  crazyflies_8.yaml  (+5 more)
src/gcbfplus/: package.xml  requirements.txt  setup.cfg  setup.py
src/gcbfplus/gcbfplus/: crazyswarm_double_integrator.py  gcbf_actor.py  gcbf_monitor.py  gcbf_state_bridge.py
src/gcbfplus/gcbfplus/algo/: __init__.py  gcbf_diffuser.py  gcbf_plus.py
src/gcbfplus/gcbfplus/algo/module/: policy.py
src/gcbfplus/gcbfplus/env/: crazyflie.py  double_integrator.py  obstacle.py  plot.py  single_integrator.py  utils.py
src/gcbfplus/gcbfplus/trainer/: data.py  trainer.py
src/gcbfplus/gcbfplus/utils/: utils.py
src/gcbfplus/launch/: gcbf_crazyswarm_nodes.launch.py
(+11 files in other folders)
