<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>crazyflie_vicon_bringup</name>
  <version>0.0.0</version>
  <description>Local Crazyflie bringup package for Vicon-based flight tests.</description>
  <maintainer email="minhyuk@todo.todo">minhyuk</maintainer>
  <license>MIT</license>

  <exec_depend>crazyflie</exec_depend>
  <exec_depend>crazyflie_py</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>motion_capture_tracking</exec_depend>
  <exec_depend>motion_capture_tracking_interfaces</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
