<?xml version="1.0"?>
<package format="3">
  <name>gcbfplus</name>
  <version>0.0.0</version>
  <description>GCBF+ ROS 2 nodes for Crazyswarm2 simulation.</description>
  <maintainer email="prachit@example.com">prachit</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>crazyflie_interfaces</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>motion_capture_tracking_interfaces</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
